--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,8 @@
     <string name="total_online_drivers">Total Online Drivers : </string>
     <string name="need_location">Enable GPS SERVICE</string>
     <string name="location_content">This app wants to change your device settings use GPS,Wi-Fi and cell networks for your location</string>
+    <string name="empty_requestKonsumen">Permintaan Berlangganan Konsumen Belum Ada</string>
+    <string name="status_noKonsumen">Belum Ada Konsumen yang Berlangganan</string>
 
     <string-array name="status">
         <item name="driver">Driver</item>
