--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,8 +72,8 @@
     </string-array>
 
     <string name="image_contentDescription">image</string>
-    <string name="let_s_get_started_text">Let\'s Get started</string>
-    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on ProMan’s Minimalist Interface.</string>
+    <string name="let_s_get_started_text">PEMESANAN AIR MINUM</string>
+    <string name="intro_text_description">Memudahkanmu Memesan Air Minum di Depot Kesukaanmu yang didukung fitur tracking</string>
 
 
 </resources>
